# trading-mcp-server

./: .gitignore  CLAUDE.md  README.md  agent-register.md  pyproject.toml
.github/workflows/: publish.yml
src/trading_mcp_server/: __init__.py  config.py  server.py
src/trading_mcp_server/backtest/: engine.py  strategies.py
src/trading_mcp_server/broker/: smartapi_adapter.py
src/trading_mcp_server/prompts/: __init__.py
src/trading_mcp_server/resources/: __init__.py
src/trading_mcp_server/services/: broker_service.py  data_provider_service.py  indicator_service.py  notification_service.py  order_validation_service.py  paper_trading_service.py  risk_service.py
src/trading_mcp_server/tools/: __init__.py  _common.py  broker.py  config_tools.py  indicators.py  market_data.py  news.py  notifications.py  paper_trading.py  portfolio.py  risk.py  strategy.py
src/trading_mcp_server/utils/: instruments.py  logger.py  time_utils.py
tests/: conftest.py  test_broker_safety.py  test_config.py  test_indicators.py  test_news.py  test_notifications.py  test_order_validation.py  test_paper_trading.py  test_risk_and_backtest.py
